<resources>
    <string name="app_name">ConstruyeFacil</string>
    <string name="full_name">Nombre Completo</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="phone">Celular</string>
    <string name="register">Registrarme</string>
    <string name="registered_already_login_here">Ya se encuentra registrado? Ingrese aquí</string>
    <string name="new_here_create_account">Es usted un nuevo usuario? Cree su cuenta aquí</string>
    <string name="loginBtn">Loguearme</string>
    <string name="registrarse">Registrarme</string>
    <string name="contrasena">Contraseña</string>
    <string name="logout">Cerrar Sesión</string>
    <color name="white">#FFFFFF</color>
</resources>
